standardizing the format of exceptions